	  your own god sends a hostile monster, it will always be an Aleax (by L)
	* Applying certain wands has a chance of creating a related trap
	* Remove bonus for role special spells
	* Luckstones dramatically slow luck timeout instead of preventing it
	  completely. Blessed luckstones slow the timeout of positive luck,
	  cursed luckstones negative luck, and uncursed luckstones both.
	

	* Artifact changes:
	  - From SporkHack:
	    - All the weapons below warn against and have 20% instakill chance 
	      against their target monsters.
	    - Dragonbane is now a dwarvish spear that conveys fire, cold, shock,
	      acid, poison, acid, and disintegration resistance while wielded.
	    - Giantslayer is now a sling that gives 18/** STR while wielded or
	      in the alternate weapon slot.
	    - Werebane conveys polymorph control while wielded.
	    - Ogresmasher gives 25 CON while wielded.
	    - Trollsbane prevents trolls from leaving corpses while wielded.
	  - Other:
	    - Luck Blade added, first sacrifice gift for Convicts
	    - Grimtooth is the first sacrifice gift for Rogues; it is now
	      permanently poisoned and grants poison resistance while wielded
	    - The Longbow of Diana gives +1 multishot and +1 damage bonus when
	      firing any type of arrow
	    - Excalibur can be cleanly untrapped when embedded in dungeon
	      features if at least devoutly lawful; it also tends to appear
	      there when gifted or wished for
	    - Replaced the Orb of Detection with Itlachiayaque as the Archeologist
	      quest artifact: a shield of reflection that grants fire resistance,
	      ESP, half spell damage, and produces stinking clouds when invoked (by L)

	* New config option for customizing monster letter in UTF8graphics:
	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke

	* removed monsters:
	  - anti-matter vortex

	* Livelog: report bag of holding explosions

	* New role: Convict class

	* new monsters:
	  - locusts (from SporkHack)